--- a/tests/tests.yml
+++ b/tests/tests.yml
@@ -1647,3 +1647,67 @@
         -   stdout
         -   exitcode
         -   stderr
+
+-   name: CMD SUB 4
+    input: |
+        echo `cd `echo `echo test```
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 5
+    input: |
+        echo `echo `echo `ls test```
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 6
+    input: |
+        echo $(echo test
+    checks:
+        -   stdout
+        -   exitcode
+        -   has_stderr
+
+-   name: CMD SUB 7
+    input: |
+        echo $(echo test)
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 8
+    input: |
+        echo $(printf oui)
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 9
+    input: |
+        echo $(echo $(echo oui))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 10
+    input: |
+        echo \` `echo test`
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: CMD SUB 11
+    input: |
+        echo \$ $(echo test)
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
