--- a/tests/tests.yml
+++ b/tests/tests.yml
@@ -1724,3 +1724,132 @@
         -   stdout
         -   exitcode
         -   stderr
+
+-   name: DOUBLE FUNCTION
+    input: |
+        bar ()
+        {
+            echo Hello World
+        }
+        foo()
+        {
+            echo hello
+            bar
+        }
+        foo
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: VARIABLES $# IN FUNCTION
+    input: |
+        foo()
+        {
+            echo $#
+        }
+        foo a b c d e
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: VARIABLES $n IN FUNCTION
+    input: |
+        foo()
+        {
+            echo $1 $2 $8 $5
+        }
+        foo 1 2 3 4 5 kfj pp 854 aedf
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+
+-   name: VARIABLES $* IN FUNCTION
+    input: |
+        foo()
+        {
+            echo $*
+        }
+        foo 1 2 3 4 5 kfj pp 854 aedf
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: VARIABLES $@ IN FUNCTION
+    input: |
+        foo()
+        {
+            echo $@
+        }
+        foo 1 2 3 4 5 kfj pp 854 aedf
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: VARIABLES MULTIPLE IN FUNCTION
+    input: |
+        foo()
+        {
+            echo This function has $# args
+            echo Theses args are: $*
+            echo The first is $1
+            echo The Last is $6
+        }
+        foo lol 1 2 3 4 5677
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: FUNCTION SUBJECT TEST
+    input: |
+        foo()
+        {
+            bar()
+            {
+                echo foobar
+            }
+        }
+        foo
+        bar
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: FUNCTION INVALID1
+    input: |
+        foo(
+        {
+            bar()
+            {
+                echo foobar
+            }
+        }
+        foo
+        bar
+    checks:
+        -   stdout
+        -   exitcode
+        -   has_stderr
+
+-   name: FUNCTION INVALID2
+    input: |
+        foo()
+
+            bar()
+            {
+                echo foobar
+            }
+        }
+        foo
+        bar
+    checks:
+        -   stdout
+        -   exitcode
+        -   has_stderr
