--- a/tests/tests.yml
+++ b/tests/tests.yml
@@ -696,6 +696,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: SIMPLE EXIT INVALID
     input: |
@@ -711,6 +712,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: EXIT WITH ECHO AT BEGINING
     input: |
@@ -727,6 +729,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: EXIT WITH IF 2
     input: |
@@ -736,6 +739,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: EXIT WITH IF ERROR
     input: |
@@ -753,6 +757,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: EXIT IN ELSE
     input: |
@@ -762,6 +767,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: EXIT NOTHING
     input: |
@@ -769,6 +775,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: ECHO EXIT
     input: |
@@ -776,6 +783,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: ECHO IF
     input: |
@@ -783,6 +791,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: ECHO ELSE
     input: |
@@ -790,6 +799,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: ECHO KEYWORD
     input: |
@@ -797,6 +807,7 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
 
 -   name: ECHO BAD OPTION
     input: |
@@ -804,6 +815,35 @@
     checks:
         -   stdout
         -   exitcode
+        -   stderr
+
+-   name: ECHO FUNCTION UNSET -F AND USE
+    input: |
+        echo()
+        {
+            ls
+        }
+        echo 4 5 8
+        unset -f echo
+        echo 7458
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ECHO FUNCTION UNSET AND USE
+    input: |
+        echo()
+        {
+            ls
+        }
+        echo 4 5 8
+        unset echo
+        echo 7458
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
 
 -   name: SIMPLE CD
     input: |
@@ -922,15 +962,6 @@
         -   exitcode
         -   stderr
 
--   name: SIMPLE INVALID EXPORT
-    input: |
-        export 1_a=42
-        echo "$a"
-    checks:
-        -   stdout
-        -   exitcode
-        -   has_stderr
-
 -   name: MULTIPLE SEMICOLON EXPORT
     input: |
         export a=42; b=78; c=abc
@@ -972,30 +1003,6 @@
         -   stdout
         -   exitcode
         -   stderr
-
--   name: BAD EXPORT INVALID NAME
-    input: |
-        export 4p
-    checks:
-        -   stdout
-        -   exitcode
-        -   has_stderr
-
--   name: BAD EXPORT INVALID SPACE 1
-    input: |
-        export a= 78
-    checks:
-        -   stdout
-        -   exitcode
-        -   has_stderr
-
--   name: BAD EXPORT INVALID SPACE 2
-    input: |
-        export a =8
-    checks:
-        -   stdout
-        -   exitcode
-        -   has_stderr
 
 -   name: DOT SCL
     input: |
@@ -2291,4 +2298,94 @@
         -   exitcode
         -   stderr
 
+-   name: ARTHMETIC EXPRESSION &
+    input: |
+        x=100
+        echo $(($x&4))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
 
+-   name: ARTHMETIC EXPRESSION |
+    input: |
+        x=100
+        echo $(($x|41))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC EXPRESSION ||
+    input: |
+        x=100
+        echo $(($x||41))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC EXPRESSION &&
+    input: |
+        x=100
+        echo $(($x&&41))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC EXPRESSION ^
+    input: |
+        x=10
+        echo $(($x^4))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC EXPRESSION ~
+    input: |
+        x=10
+        echo $((~$x))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC EXPRESSION !
+    input: |
+        x=10
+        echo $((!$x))
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
+
+-   name: ARTHMETIC INVALID 1
+    input: |
+        echo $((3+9-9*3+/5))
+    checks:
+        -   stdout
+        -   exitcode
+        -   has_stderr
+
+-   name: ARTHMETIC INVALID 2
+    input: |
+        echo $(((((((((((((((((3+9-9*3+(5)))
+    checks:
+        -   stdout
+        -   exitcode
+        -   has_stderr
+
+-   name: FUNCTION DOUBLE CALLS
+    input: |
+        foo()
+        {
+            echo foo
+        }
+        foo
+        foo
+    checks:
+        -   stdout
+        -   exitcode
+        -   stderr
